// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render with no styles 1`] = `
<Text
  style={
    Array [
      undefined,
      Object {
        "fontFamily": "space-mono",
      },
    ]
  }
>
   No Styles 
</Text>
`;

exports[`render with styles 1`] = `
<Text
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 3,
        "padding": 4,
      },
      Object {
        "fontFamily": "space-mono",
      },
    ]
  }
>
   Test 
</Text>
`;
